[tool.poetry]
name = "reinforcement-learning-tp2"
version = "0.1.0"
description = ""
authors = ["Pierre-Louis Guhur <pierre-louis.guhur@argile.ai>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
gym = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
